# Instaurant

./: .editorconfig  README.md  db  pyproject.toml
Instaurant/: apps.py  models.py  tokens.py  urls.py  views.py
Instaurant/migrations/: 0001_initial.py
Restaurant/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: home.css  login.css  signup.css
templates/: base.html
templates/Instaurant/: index.html
