[tool.poetry]
name = "instaurant"
version = "0.1.0"
description = ""
authors = ["Siddhesh Agarwal <siddhesh.agarwal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
six = "^1.16.0"
mysqlclient = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
